--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
-[submodule "chisel"]
-	path = chisel
-	url = https://github.com/ucb-bar/chisel.git
 [submodule "tutorial"]
 	path = tutorial
 	url = https://github.com/ucb-bar/chisel-tutorial.git
+[submodule "chisel3"]
+	path = chisel
+	url = https://github.com/ucb-bar/chisel3.git
+[submodule "testers"]
+	path = testers
+	url = https://github.com/ucb-bar/chisel-testers.git
+[submodule "firrtl"]
+	path = firrtl
+	url = https://github.com/ucb-bar/firrtl.git
