--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "firrtl"]
 	path = firrtl
 	url = https://github.com/ucb-bar/firrtl.git
+[submodule "firrtl-interpreter"]
+	path = firrtl-interpreter
+	url = https://github.com/ucb-bar/firrtl-interpreter.git
