--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = firrtl
 	url = https://github.com/ucb-bar/firrtl.git
 [submodule "firrtl-interpreter"]
-	path = firrtl-interpreter
+	path = interp
 	url = https://github.com/ucb-bar/firrtl-interpreter.git
